fixed Room Database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Statify" >
+        android:theme="@style/Theme.Statify"
+        android:name=".App"
+        >
         <activity
             android:name="com.example.statify.activities.HomeActivity"
             android:exported="false" />
