--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,10 @@ dependencies {
     //Spotify Web App Api (https://github.com/kaaes/spotify-web-api-android)
     implementation 'com.github.kaaes:spotify-web-api-android:0.4.1'
 
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     // room persistence library
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     implementation "androidx.room:room-rxjava2:$ROOM_VERSION"
