--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.statify">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,11 +13,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Statify">
-        <service
-            android:name=".services.SongService"
-            android:enabled="true"
-            android:exported="true"></service>
-
         <activity
             android:name=".activities.HomeActivity"
             android:exported="false" />
